Updated version, permissions, description

--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
 	"name": "BookmarkTab",
-	"version": "0.1",
+	"version": "0.9",
 	
-	"description": "Bookmarks in the new tab page",
+	"description": "A New Tab replacement with easy access to Bookmarks.",
 	"icons": {"48":"bookmarks.png"},
 	
 	"chrome_url_overrides": {"newtab":"BookmarkTab.html"},
 	"options_page": "options.html",
-	"permissions": ["bookmarks","chrome://favicon/","unlimited_storage","tabs"]
+	"permissions": ["bookmarks","tabs"]
 }
